add pool multi-sign
